--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.10",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
+    "apollo-server-fastify": "^2.19.2",
     "dotenv": "^8.2.0",
     "fastify": "^3.10.1",
     "fastify-cookie": "^5.1.0",
@@ -28,6 +29,7 @@
     "pino-pretty": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.2.30",
     "typescript": "^4.1.3"
   },
