--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.10",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
+    "@wulkanowy/sdk": "^0.1.1",
     "apollo-server-fastify": "^2.19.2",
     "dotenv": "^8.2.0",
     "fastify": "^3.10.1",
