--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "@types/express": "^4.17.10",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
+    "@types/url-join": "^4.0.0",
     "@wulkanowy/sdk": "^0.1.1",
     "apollo-server-fastify": "^2.19.2",
     "dotenv": "^8.2.0",
     "fastify": "^3.10.1",
     "fastify-cookie": "^5.1.0",
+    "fastify-http-proxy": "^4.2.0",
     "fastify-sensible": "^3.1.0",
     "fastify-session": "^5.2.1",
     "lodash": "^4.17.20",
@@ -32,7 +34,8 @@
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.30",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.13.0",
