--- a/website/codegen.yml
+++ b/website/codegen.yml
@@ -1,6 +1,7 @@
 schema: http://localhost:3000/api/website/graphql
 documents:
   - src/graphql/queries/get-prompt-info.ts
+  - src/graphql/mutations/login.ts
 generates:
   ./src/graphql/generated.ts:
     plugins:
