--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
+    "vue-recaptcha": "^1.3.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
