--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "fastify-sensible": "^3.1.0",
     "fastify-session": "^5.2.1",
     "got": "^11.8.1",
+    "graphql-request": "^3.4.0",
+    "graphql-tag": "^2.11.0",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
     "nanoid": "^3.1.20",
