--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -33,6 +33,9 @@
     "@typescript-eslint/consistent-type-imports": ["error", {
       "prefer": "type-imports",
       "disallowTypeAnnotations": true
+    }],
+    "no-underscore-dangle": ["error", {
+      "allow": ["_id"]
     }]
   }
 }
