--- a/website/codegen.yml
+++ b/website/codegen.yml
@@ -2,6 +2,8 @@ schema: http://localhost:3000/api/website/graphql
 documents:
   - src/graphql/queries/get-prompt-info.ts
   - src/graphql/mutations/login.ts
+  - src/graphql/mutations/set-symbol.ts
+  - src/graphql/mutations/create-user.ts
 generates:
   ./src/graphql/generated.ts:
     plugins:
