List apps on home page

--- a/website/codegen.yml
+++ b/website/codegen.yml
@@ -1,11 +1,7 @@
 schema: http://localhost:3000/api/website/graphql
 documents:
-  - src/graphql/queries/get-prompt-info.ts
-  - src/graphql/queries/get-login-state.ts
-  - src/graphql/mutations/login.ts
-  - src/graphql/mutations/set-symbol.ts
-  - src/graphql/mutations/create-user.ts
-  - src/graphql/mutations/create-application.ts
+  - src/graphql/queries/*.ts
+  - src/graphql/mutations/*.ts
 generates:
   ./src/graphql/generated.ts:
     plugins:
